Sticky just above the top to stop firefox bleeding

--- a/public/css/phills.css
+++ b/public/css/phills.css
@@ -26,7 +26,7 @@ a:hover, a:focus {
 .sidebar-inner, article > h2 {
   position: -webkit-sticky;
   position: sticky;
-  top: 0;
+  top: -1px;
   padding-top: 8px;
 }
 article > h2 {
